deployment/kustomize/base/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: sivtsov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: web-server
  template:
    metadata:
      labels:
        deployment: web-server
        app: sivtsov-app
    spec:
      containers:
        - name: web-container
          image: webimage
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
