deployment/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gleb-sampleapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gleb-sampleapp
  template:
    metadata:
      labels:
        app: gleb-sampleapp
    spec:
      containers:
        - name: gleb-sampleapp
          image: ghost19/sampleapp:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          args: 
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
