deployment/kustomize/base/configmap.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service

spec:
  selector:
    app: sivtsov-app
  ports:
    - name: web
      port: 8000
      targetPort: 8000
    - name: db
      port: 5432
      targertPort: 5432
  type: ClusterIP
