deployment/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
  
metadata:
  name: gleb-sampleapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:   
  rules:   
    - host: gleb.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gleb-sampleapp-service
                port:
                  name: http

  tls:
    - hosts:
      - gleb.dacdevops.ru
      secretName: gleb-sampleapp-cert
